# KLVW-Wallpaper

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_utils.cpp
app/src/main/kotlin/com/klvw/wallpaper/: KLVWApplication.kt
app/src/main/kotlin/com/klvw/wallpaper/aer/: AerDocumentsProvider.kt  AerFolder.kt  AerLockStore.kt  AerMountActivity.kt  AerShell.kt
app/src/main/kotlin/com/klvw/wallpaper/di/: AppModule.kt
app/src/main/kotlin/com/klvw/wallpaper/service/: KLVWallpaperService.kt  KLVWallpaperServiceLock.kt  WallpaperColorUtils.kt  WallpaperEngine.kt
app/src/main/kotlin/com/klvw/wallpaper/tasker/: TaskerActionEdit.kt  TaskerActionFire.kt  TaskerBundle.kt  WallpaperIntentReceiver.kt
app/src/main/kotlin/com/klvw/wallpaper/tile/: KLVWDeviceAdminReceiver.kt  KLVWPopupActivity.kt  KLVWPopupScreen.kt  KLVWPopupViewModel.kt  KLVWQuickSetActivity.kt  KLVWQuickSetConfirmActivity.kt  KLVWQuickSetTileService.kt  PopupItem.kt  ScreenUnlockReceiver.kt  TileConfigActivities.kt  TimerActionPickerActivity.kt  TimerActionReceiver.kt  TimerStatusNotificationHelper.kt  WallpaperTimerManager.kt  (+1 more)
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_provider_paths.xml  wallpaper_info.xml  wallpaper_info_lock.xml  wear.xml
gradle/: libs.versions.toml
wear/: build.gradle.kts  proguard-rules.pro
wear/src/main/: AndroidManifest.xml
wear/src/main/res/xml/: wear.xml
(+52 files in other folders)
